--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "@faker-js/faker": "^9.6.0",
     "@hookform/resolvers": "^4.1.2",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-aspect-ratio": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dialog": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.2",
