chore: modify several details

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,41 @@
 # When adding additional environment variables, the schema in "/src/env.js"
 # should be updated accordingly.
 
-# Prisma
-# https://www.prisma.io/docs/reference/database-reference/connection-urls#env
+# =======================
+# Prisma (Database URLs)
+# =======================
 
-# Connect to Supabase via connection pooling with Supavisor.
-DATABASE_URL=
+# Connect to Supabase via connection pooling (recommended in serverless)
+DATABASE_URL="postgresql://[DB_USER].[PROJECT_REF]:[PASSWORD]@[REGION].pooler.supabase.com:6543/postgres?pgbouncer=true"
 
-# Direct connection to the database. Used for migrations.
-DIRECT_URL=
+# Direct database connection (used for migrations and local tools)
+DIRECT_URL="postgresql://[DB_USER].[PROJECT_REF]:[PASSWORD]@[REGION].pooler.supabase.com:5432/postgres"
 
-NEXT_PUBLIC_SUPABASE_URL=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
-NEXT_PUBLIC_ADMIN_EMAILS=
-NEXT_PUBLIC_BASE_URL=
-NEXT_PUBLIC_VENDOR_API_BASE_URL=
-NEXT_PUBLIC_VENDOR_USERNAME=
-NEXT_PUBLIC_VENDOR_PASSWORD=
+# =======================
+# Supabase Project Config
+# =======================
+
+# Public Supabase URL (used in frontend)
+NEXT_PUBLIC_SUPABASE_URL=https://[PROJECT_REF].supabase.co
+
+# Supabase anon/public key (used by browser clients)
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
+
+# Supabase service role key (used by server)
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
+
+# Public URL to access Supabase storage bucket
+NEXT_PUBLIC_SUPABASE_STORAGE_BASE_URL=https://[PROJECT_REF].supabase.co/storage/v1/object/public
+
+# =======================
+# App Configuration
+# =======================
+
+# Comma-separated list of admin emails
+NEXT_PUBLIC_ADMIN_EMAILS=admin@example.com
+
+# Base URL of your frontend app
+NEXT_PUBLIC_BASE_URL=http://localhost:3000
+
+# Secret string used for verifying ping requests or internal actions
+NEXT_PUBLIC_PING_SECRET=your-ping-secret-here
