--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "e-booking",
+  "name": "empower-v2",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -18,6 +18,7 @@
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
     "start": "next start",
+    "start:cron": "node --no-warnings --loader ts-node/esm src/utils/cron/ping.ts",
     "typecheck": "tsc --noEmit"
   },
   "prisma": {
@@ -27,6 +28,7 @@
     "@faker-js/faker": "^9.6.0",
     "@hookform/resolvers": "^4.1.2",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-aspect-ratio": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
@@ -75,12 +77,14 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.0",
     "geist": "^1.3.0",
     "lucide": "^0.475.0",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.10",
     "next": "^15.0.1",
     "next-themes": "^0.4.4",
+    "node-cron": "^4.2.1",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -100,8 +104,10 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/dotenv": "^6.1.1",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.17.24",
+    "@types/node-cron": "^3.0.11",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
@@ -114,7 +120,7 @@
     "prisma": "^5.14.0",
     "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.38.1"
